reset on the backend

--- a/backend/variables.env
+++ b/backend/variables.env
@@ -1,6 +1,6 @@
 FRONTEND_URL="http://localhost:7777"
-PRISMA_ENDPOINT="https://us1.prisma.sh/marcell-ciszek-druzynski-7d1828/sick-fitsss/dev"
-PRISMA_SECRET="sdasdadwawds"
+PRISMA_ENDPOINT="https://us1.prisma.sh/marcell-ciszek-druzynski-7d1828/sick-fits/dev"
+PRISMA_SECRET="dsadasd[sadasdasd"
 APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_123youchanget his"
 PORT=4444
