--- a/backend/variables.env
+++ b/backend/variables.env
@@ -4,3 +4,7 @@ PRISMA_SECRET="dsadasd[sadasdasd"
 APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_123youchanget his"
 PORT=4444
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORt=2525
+MAIL_USER="5454027e668581"
+MAIL_PASSWORD="5bda8e7947afc2"
