--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-styled-components": "^1.7.1",
     "date-fns": "^2.0.0-alpha.7",
+    "dotenv": "^8.2.0",
     "downshift": "^2.2.3",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -27,6 +28,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "^7.0.0",
     "next-with-apollo": "^3.1.3",
+    "now": "^16.4.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
