--- a/backend/variables.env
+++ b/backend/variables.env
@@ -2,7 +2,7 @@ FRONTEND_URL="http://localhost:7777"
 PRISMA_ENDPOINT="https://us1.prisma.sh/marcell-ciszek-druzynski-7d1828/sick-fits/dev"
 PRISMA_SECRET="dsadasd[sadasdasd"
 APP_SECRET="jwtsecret123"
-STRIPE_SECRET="sk_123youchanget his"
+STRIPE_SECRET="sk_test_XKu1dZWNMO8qpI2CQvXe83nK000NoWWNYq"
 PORT=4444
 MAIL_HOST="smtp.mailtrap.io"
 MAIL_PORt=2525
