--- a/backend/variables.env
+++ b/backend/variables.env
@@ -5,6 +5,6 @@ APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_test_XKu1dZWNMO8qpI2CQvXe83nK000NoWWNYq"
 PORT=4444
 MAIL_HOST="smtp.mailtrap.io"
-MAIL_PORt=2525
+MAIL_PORT=2525
 MAIL_USER="5454027e668581"
 MAIL_PASSWORD="5bda8e7947afc2"
