--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@emotion/react": "^11.4.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^11.0.1",
     "framer-motion": "^4.1.17",
     "next": "11.0.0",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hotkeys-hook": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
