--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
+    "jest-matchmedia-mock": "^1.1.0",
     "jest-next-dynamic": "^1.0.1",
     "jest-watch-typeahead": "^0.6.4",
     "lint-staged": "^11.0.0",
