--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^11.0.1",
     "framer-motion": "^4.1.17",
+    "gray-matter": "^4.0.3",
     "next": "11.0.0",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
