--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
     "next": "11.0.0",
+    "next-mdx-remote": "^3.0.2",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hotkeys-hook": "^3.3.2"
+    "react-hotkeys-hook": "^3.3.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
