--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "date-fns": "^2.22.1",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
+    "mdx-prism": "^0.3.3",
     "next": "11.0.0",
     "next-mdx-remote": "^3.0.2",
     "next-seo": "^4.26.0",
+    "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hotkeys-hook": "^3.3.2",
+    "rehype": "^11.0.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   },
